[package]
name = "slipperos"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["loki"]
description = "Minimalist RISC-V kernel for OC2r"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[profile.dev]
panic = "abort"
debug = true

[[bin]]
name = "slipperos"
path = "kernel/main.rs"

[lints.clippy]
all = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = "warn"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
doc_markdown = "allow"

[dependencies]
riscv = "0.11"
